# first_token

deployer/: .gitignore  index.js  index.ts  package-lock.json  package.json
first-token/: Cargo.toml
first-token/artifacts/: first-token.wasm
first-token/src/: contract.rs  msg.rs
